--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,47 +1,10 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="bg-zinc-900 h-screen w-full p-10">
-      <div>
-        <form action="/login" method="post">
-          <input
-            class="bg-zinc-800 w-72 text-white block px-3 py-2 mt-4 mb-4"
-            type="text"
-            placeholder="email"
-            name="email"
-          />
-          <input
-            class="bg-zinc-800 w-72 text-white block px-3 py-2 mt-4 mb-4"
-            type="password"
-            placeholder="password"
-            name="password"
-          />
 
-          <button class="bg-blue-500 rounded-md text-white px-3 py-2">
-            Login!
-          </button>
-        </form>
-      </div>
-      <a class="text-blue-500 initial-block inline-block mt-4" href="/register"
-        >Not an User? then Register!!</a
-      >
-    </div>
-
-    <script src="sciript1.js"></script>
-  </body>
-</html> -->
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/favicon-32x32.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <script src="https://cdn.tailwindcss.com"></script>
