--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<link rel="icon" type="image/png" href="/favicon_io/android-chrome-512x512.png">
+ <link rel="icon" type="image/png" href="/favicon-32x32.png">
 <link rel="manifest" href="/site.webmanifest">
  <!-- Change color here -->
     <meta name="msapplication-navbutton-color" content="#FF5933" />
     <meta name="apple-mobile-web-app-status-bar-style" content="#FF5933" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    
+  
     <meta charset="UTF-8" />
     <meta name="theme-color" content="#FF5733" />
    
