--- a/views/main.ejs
+++ b/views/main.ejs
@@ -213,6 +213,17 @@
                       </button>
                     </a>
 
+                        <a href="/about">
+                      <button
+                        class="flex items-center w-full px-4 py-2 text-left text-gray-700 hover:bg-gray-50 rounded !rounded-button"
+                      >
+                        <i
+                          class="ri-info-i w-5 h-5 flex items-center justify-center mr-3"
+                        ></i>
+
+About Us                      </button>
+                    </a>
+
                     <% if (user.isAdmin) { %>
 
                     <a href="/admin">
@@ -646,7 +657,7 @@
                   <a href="#" class="text-gray-400 hover:text-white">Deals</a>
                 </li>
                 <li>
-                  <a href="#" class="text-gray-400 hover:text-white"
+                  <a href="/about" class="text-gray-400 hover:text-white"
                     >About Us</a
                   >
                 </li>
@@ -687,6 +698,9 @@
                 </a>
                 <a href="#" class="text-gray-400 hover:text-white">
                   <i class="ri-linkedin-fill text-xl"></i>
+                </a>
+                   <a href="#" class="text-gray-400 hover:text-white">
+                  <i class="ri-github-fill text-xl"></i>
                 </a>
               </div>
             </div>
